tests/print_bad_arg_type.stderr
tests/print_bad_arg_type.hop:3:8: error: HOP2004: type mismatch
